--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -2345,3 +2345,50 @@ SLACcitation   = "%%CITATION = ARXIV:0906.2474;%%",
 	reportNumber   = "RUNHETC-2010-19, SCIPP-10-14, UCSD-PTH-10-06",
 	SLACcitation   = "%%CITATION = ARXIV:1007.5515;%%",
 }
+
+@article{Kumar:2013hfa,
+	author         = "Kumar, Abhishek and Tulin, Sean",
+	title          = "{Top-flavored dark matter and the forward-backward
+	asymmetry}",
+	journal        = "Phys.Rev.",
+	number         = "9",
+	volume         = "D87",
+	pages          = "095006",
+	doi            = "10.1103/PhysRevD.87.095006",
+	year           = "2013",
+	eprint         = "1303.0332",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "MCTP-13-04",
+	SLACcitation   = "%%CITATION = ARXIV:1303.0332;%%",
+}
+
+@article{Batell:2013zwa,
+	author         = "Batell, Brian and Lin, Tongyan and Wang, Lian-Tao",
+	title          = "{Flavored Dark Matter and R-Parity Violation}",
+	journal        = "JHEP",
+	volume         = "1401",
+	pages          = "075",
+	doi            = "10.1007/JHEP01(2014)075",
+	year           = "2014",
+	eprint         = "1309.4462",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	SLACcitation   = "%%CITATION = ARXIV:1309.4462;%%",
+}
+
+@article{Kilic:2015vka,
+	author         = "Kilic, Can and Klimek, Matthew D. and Yu, Jiang-Hao",
+	title          = "{Signatures of Top Flavored Dark Matter}",
+	journal        = "Phys.Rev.",
+	number         = "5",
+	volume         = "D91",
+	pages          = "054036",
+	doi            = "10.1103/PhysRevD.91.054036",
+	year           = "2015",
+	eprint         = "1501.02202",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "UTTG-28-14, TCC-027-14",
+	SLACcitation   = "%%CITATION = ARXIV:1501.02202;%%",
+}
