--- a/doc/tex/SingleB.tex
+++ b/doc/tex/SingleB.tex
@@ -7,8 +7,9 @@ This model favors couplings to third-generation quarks via Yukawa couplings,
 therefore respecting the MFV assumption. 
 
 This model produces an annihilation cross section consistent with the gamma-ray excess
-that has perturbative values for the couplings and is
-consistent with LHC constraints on the colored mediator.
+which can be achieved for perturbative
+values of the couplings, while being consistent with LHC constraints on the
+colored mediator
 For parameters capable of explaining the anomalous gamma-ray signal in terms of Dark Matter 
 coupling preferentially to $b$-quarks, the model predicts a direct detection cross section that is consistent 
 with current constraints, but within the near future reach of Direct Detection experiments and of the
@@ -22,7 +23,12 @@ made sufficiently heavy and weakly-coupled that they can be neglected in the ana
 A flavor singlet, color triplet scalar field $\Phi$ mediates the interactions between the DM 
 and the Standard Model quarks.  The model is similar to the MSSM with a light bottom squark and neutralino, 
 and is thus a flavor-specific example of a \tchannel model. 
-\Todo{Spell out implications on MFV assumption, and whether top-flavored could exist too.}
+Similar top-flavored models can exist, as e.g. in Refs.~\cite{Kumar:2013hfa,Batell:2013zwa}. 
+In the case where the top coupling is the main DM coupling, 
+the signal is very similar to a signal from a stop quark, since unlike the other t-channel cases there is no top
+in the initial state PDFs. This is the reason why it wasn't considered as an additional model. More recent
+literature shows that other flavor states could also contribute to LHC signals, as shown in Ref.~\cite{Kilic:2015vka},
+but such models will have to be investigate on a longer timescale with respect to that of this Forum. 
 
 The Lagrangian considered is given by
 \begin{equation}
