MonoH comments finished up
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@321 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EWSpecificModels_MonoHiggs.tex
+++ b/doc/tex/EWSpecificModels_MonoHiggs.tex
@@ -208,11 +208,14 @@ The second term describes the interaction between the \Zprime and the SM Higgs b
 via the coupling $g_{h \Zprime \Zprime} = \frac{m_{\Zprime}2 \sin\theta}{v_B}$, where
 $\sin\theta$ is the mixing angle between the SM Higgs and the baryonic Higgs $h_B$, and $v_B$ is the
 Baryonic Higgs vacuum expectation value. 
-In its most general form, this model can lead to mono-Z signals as well. However, in this case
-there is no $Z-Z'$ mixing from the $h \Zprime \Zprime$ term, since this term arises only
-after $U(1)_B$ is broken. A mixing angle can come from terms involving 
-the field strengths of $Z$ and $Z'$: this is a free parameter, that is set to be small
-in the model considered for mono-Higgs signatures. 
+
+%In its most general form, this model can lead to mono-Z signals as well. However, in this case
+%there is no $Z-Z'$ mixing from the $h \Zprime \Zprime$ term, since this term arises only
+%after $U(1)_B$ is broken. A mixing angle can come from terms involving 
+%the field strengths of $Z$ and $Z'$: this is a free parameter, that is set to be small
+%in the model considered for mono-Higgs signatures. 
+
+"In its most general form, this model can contribute to mono-Z signals due to the \Zprime mixing with the Z or photon. Note that EWSB and $ U(1)_B $ breaking do not lead to this mixing at tree-level. Instead, kinetic mixing occurs between the $ U(1)_Y $ and $ U(1)_B $ gauge bosons due to the gauge invariant term $ F^{\mu\nu}_Y F_{B\mu\nu} $. This mixing is a free parameter which we assume to be small in order to focus on the mono-Higgs signature. Mixing may also occur due to radiative corrections, however this is model dependent so we choose to ignore this here.
 
 %TODO: 
 %	1- Mention sensitivity difference wrt monojet? 
@@ -343,8 +346,8 @@ on a smaller set of grid points to be generated.
 
 A real scalar singlet $S$ coupling to DM can be introduced as a portal between SM and the dark sector 
 through the Higgs field. The most general scalar potential is detailed in Ref.~\ref{O'Connell:2006wi}, 
-including terms that break \Ztwo. This report does not cover the case in which \Ztwo holds and
-therefore the new scalar can be the DM candidate, but follows Ref.~\ref{Carpenter:2013xra}
+including terms that break \Ztwo. 
+The \Ztwo symmetry, which causes the new scalar to also be a DM candidate, is not covered in this report, but follows Ref.~\ref{Carpenter:2013xra}
 introducing an additional coupling to DM that breaks \Ztwo and leads to a new invisible decay of $S$. 
 For this reason, no symmetry is broken and no new interactions arise, so there is no dependence on the vacuum
 expectation value of $S$: a shift in the field leads to a redefinition of the model couplings. 
