Round of fixes for citations and pdf bookmarkstrings.
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@322 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -2392,3 +2392,43 @@ SLACcitation   = "%%CITATION = ARXIV:0906.2474;%%",
 	reportNumber   = "UTTG-28-14, TCC-027-14",
 	SLACcitation   = "%%CITATION = ARXIV:1501.02202;%%",
 }
+
+
+@article{Chala:2015ama,
+      author         = "Chala, Mikael and Kahlhoefer, Felix and McCullough,
+                        Matthew and Nardini, Germano and Schmidt-Hoberg, Kai",
+      title          = "{Constraining Dark Sectors with Monojets and Dijets}",
+      year           = "2015",
+      eprint         = "1503.05916",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "DESY-15-036, CERN-PH-TH-2015-057",
+      SLACcitation   = "%%CITATION = ARXIV:1503.05916;%%",
+}
+
+@article{Bai:2015nfa,
+      author         = "Bai, Yang and Bourbeau, James and Lin, Tongyan",
+      title          = "{Dark Matter Searches with a Mono-Z' jet}",
+      year           = "2015",
+      eprint         = "1504.01395",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1504.01395;%%",
+}
+
+@article{Endo:2014mja,
+      author         = "Endo, Motoi and Yamamoto, Yasuhiro",
+      title          = "{Unitarity Bounds on Dark Matter Effective Interactions
+                        at LHC}",
+      journal        = "JHEP",
+      volume         = "1406",
+      pages          = "126",
+      doi            = "10.1007/JHEP06(2014)126",
+      year           = "2014",
+      eprint         = "1403.6610",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "UT-14-11, UG-FT-309-14, CAFPE-179-14",
+      SLACcitation   = "%%CITATION = ARXIV:1403.6610;%%",
+}
+
