--- a/doc/tex/AdditionalDetails.tex
+++ b/doc/tex/AdditionalDetails.tex
@@ -1,4 +1,4 @@
-\section{Further information for baryonic \Zprime Model}
+\section{\texorpdfstring{Further information for baryonic \Zprime Model}{Further information for baryonic Z' Model}}
 
 \subsection{Cross-section scaling}
 
