--- a/doc/tex/EFTValidity.tex
+++ b/doc/tex/EFTValidity.tex
@@ -37,7 +37,7 @@ are testing the regime of small momentum transfers, where the EFT approximation 
 Collider experiments, though, are sensitive to large momentum transfers: this is a regime where careful 
 treatment is necessary since the condition of applicability of the EFT may not hold~\footnote{
 Furthermore, mapping EFT results from high to low momentum requires particular care for some of the operators, 
-see Ref.~\ref{D'Eramo:2014aba} for a thorough discussion.}
+see Ref.~\cite{D'Eramo:2014aba} for a thorough discussion.}
 The correct approach is to assess the applicability of EFT, not abandon it.
 
 %As we have learned, EFTs do not truly represent a model-independent representation of the data for the current collider sensitivity.
@@ -106,7 +106,7 @@ the EFT approximation corresponds to expanding the propagator
 for the mediator
 in powers of $\Qtr^2/\mMed^2$, truncating at lowest order, and combining the remaining parameters into a single parameter \Mstar 
 (connected to the scale of the interaction $\Lambda$ in the literature).
-For an example scenario with a \Zprime-type mediator (leading to some combination of operators D5 to D8 in the notation of~\ref{Goodman:2010ku} for the EFT limit),
+For an example scenario with a \Zprime-type mediator (leading to some combination of operators D5 to D8 in the notation of~\cite{Goodman:2010ku} for the EFT limit),
 this corresponds to setting
  
 \be
