--- a/doc/tex/EWSpecificModels_Appendix.tex
+++ b/doc/tex/EWSpecificModels_Appendix.tex
@@ -1,8 +1,8 @@
-\section{\texorpdfstring{Models with a single $top-$quark + \MET}{Models with a single top-quark + \MET}}
+\section{\texorpdfstring{Models with a single $top-$quark + \MET}{Models with a single top-quark + MET}}
 \label{sec:singletop}
 \input{tex/SingleTop.tex}
 
-\section{Further W+\MET models with possible cross-section enhancements} 
+\section{\texorpdfstring{Further W+\MET models with possible cross-section enhancements}{Further W+MET models with possible cross-section enhancements}}
 
 %Contributed by Yang Bai
 
