--- a/doc/tex/EWSpecificModels_EFT.tex
+++ b/doc/tex/EWSpecificModels_EFT.tex
@@ -25,7 +25,7 @@ Higher dimensional operators, up to dimension 8, leading to Higgs+\MET signature
 are mentioned in~\cite{Carpenter:2012rg, Berlin:2014cfa}. The first part of this Section outlines
 the main characteristics for a limited number of these models that could be 
 considered in Run-2 searches. 
-However, the EFT approximation made for these operators can be problematic, see Ref.~\ref{Berlin:2014cfa} for discussion.
+However, the EFT approximation made for these operators can be problematic, see Ref.~\cite{Berlin:2014cfa} for discussion.
 For this reason, model-independent results as in Appendix~\ref{app:Presentation_Of_Experimental_Results} 
 should be privileged over considering these operators as realistic benchmarks. 
 %We also recommend not to optimize searches based on those benchmark models. 
