--- a/doc/tex/EWSpecificModels_MonoHiggs.tex
+++ b/doc/tex/EWSpecificModels_MonoHiggs.tex
@@ -345,9 +345,9 @@ on a smaller set of grid points to be generated.
 \subsection{\MET+Higgs from a scalar mediator}
 
 A real scalar singlet $S$ coupling to DM can be introduced as a portal between SM and the dark sector 
-through the Higgs field. The most general scalar potential is detailed in Ref.~\ref{O'Connell:2006wi}, 
+through the Higgs field. The most general scalar potential is detailed in Ref.~\cite{O'Connell:2006wi}, 
 including terms that break \Ztwo. 
-The \Ztwo symmetry, which causes the new scalar to also be a DM candidate, is not covered in this report, but follows Ref.~\ref{Carpenter:2013xra}
+The \Ztwo symmetry, which causes the new scalar to also be a DM candidate, is not covered in this report, but follows Ref.~\cite{Carpenter:2013xra}
 introducing an additional coupling to DM that breaks \Ztwo and leads to a new invisible decay of $S$. 
 For this reason, no symmetry is broken and no new interactions arise, so there is no dependence on the vacuum
 expectation value of $S$: a shift in the field leads to a redefinition of the model couplings. 
