--- a/doc/tex/MonojetLikeModels_Appendix.tex
+++ b/doc/tex/MonojetLikeModels_Appendix.tex
@@ -1,4 +1,4 @@
-\section{\texorpdfstring{Implementation of \schannel and \tchannel models for \MET+X analyses}{Implementation of \schannel and \tchannel models for \MET+X analyses}}
+\section{\texorpdfstring{Implementation of \schannel and \tchannel models for \MET+X analyses}{Implementation of \schannel and \tchannel models for MET+X analyses}}
 
 There are several matrix element implementations of the
 DM production through \spinzero and \spinone mediators. This Appendix collects the 
@@ -29,7 +29,7 @@ for this case as well.
 Here, we document some specific settings needed to run the \powheg 
 generation for the Dark Matter models. POWHEG parameter cards for all models
 can be found on the Forum SVN repository
-~\cite{ForumSVN_DMA, ForumSVN_DMV, ForumSVN_DMS_tloop, ForumSVN_DMA_tloop}.
+~\cite{ForumSVN_DMA, ForumSVN_DMV, ForumSVN_DMS_tloop, ForumSVN_DMP_tloop}.
 
 
 \begin{itemize}
