--- a/doc/tex/SingleTop.tex
+++ b/doc/tex/SingleTop.tex
@@ -128,7 +128,7 @@ where the objects $y_s$ and $\lambda_s$ are
 a tridimensional vector and a $3\times 3$ matrix
 in flavor space respectively. 
 This class of scenarios is the one that has been adopted by the ATLAS collaboration for its
-Run~I monotop searches~\cite{ATLASmonotop} and will be considered by both
+Run~I monotop searches~\cite{Aad:2014wza} and will be considered by both
 collaborations for Run~II analyses.
 
 The resulting model can be likened to the MSSM with an $R$-parity violating of
@@ -162,7 +162,7 @@ monotop production mode and the $(1)$ superscript to the vectorial nature of the
 
 As for the resonant case, the Lagrangian of Eq.~\eqref{eq:lagrangianNonResonantVector} is the one that
 has been used by CMS after reintroducing the scalar option for the invisible
-state and neglecting all pseudoscalar interactions~\cite{CMSmonotop}. As
+state and neglecting all pseudoscalar interactions~\cite{Khachatryan:2014uma}. As
 already mentioned, a simplified setup motivated by gauge invariance and
 minimality has been preferred so that, as shown in Ref.~\cite{Boucheneb:2014wza}, we
 impose all interactions to involve right-handed quarks only,
